--- a/style.css
+++ b/style.css
@@ -1,78 +1,110 @@
 *{
-    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 body{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: sans-serif;
+    color: #222
 }
-.intro{
-    background-image: url(images/shop.jpg);
-    background-position: 100px;
-    background-color: rgb(96, 93, 93);
-    font-size: 30px;
-    color: rgb(201, 236, 29);
-    opacity: 0.9;
-}
-#brand{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-style: italic;
-}
-header{
-    background-color: palevioletred;
-    text-align: center;
-    font-size: 35px;
-    color: #7FFF;
-    border-radius: 5px;
-}
-main section nav{
-    float: left;
-    background-color: #ccc;
-    width: 40%;
-    height: 300px;
-    padding: 20px;
-    border-radius: 5px;
-}
-nav ul{
+#menu ul{
+    background: aqua;
     list-style-type: none;
-    font-size: 20px;
+    float: none;
+    padding-bottom: 5px;
 }
-section h3{
-    font-size: 20px;
+#menu #list1{
+    margin-right: 850px;
+}
+#menu li{
+    color: #f1f1f1;
+    display: inline-block;
+    width: 100px;
+    height: 40px;
+    line-height: 40px;
+}
+#menu ul li a{
+    text-decoration: none;
+    color: #222;
+    display: block;
+    font-weight: bold;
+}
+#menu ul li a img{
+    width: 40px;
+    height: 40px;
+    margin-top: 15px;
+}
+#menu ul li a:hover{
+    background: #f1f1f1;
     color: #222;
 }
-section form input, select{
-    width: 45%;
+#menu .sub-menu{
+    position: absolute;
+    padding-bottom: 50px;
+    padding-left: 10px;
+    padding-right: 10px;
+    display: none;
+    top: auto;
+    left: auto;
+}
+#menu li:hover .sub-menu{
+    display: flex;
+}
+main marquee{
+    margin-top: 70px;
+    background: aqua;
+}
+.slide img{
+    margin-left: 50px;
+    margin-right: 50px;
+    width: 350px;
+    height: 200px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+main form h1{
+    margin-top: 20px;
+    text-align: center;
+    color: blue;
+}
+main form input{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 15px;
+    padding: 15px;
+    width: 450px;
     height: 30px;
 }
-section form label{
-    font-size: 20px;
-    color: blue;
-    margin-right: 20px;
+main form button{
+    margin-left: 930px;
+    margin-top: 20px;
+    width: 100px;
+    height: 50px;
 }
-article{
-    float: left;
-    padding: 20px;
-    width: 60%;
-    background-image: url(images/map.jpg);
-    opacity: 0.9;
-    height: 300px;
-    border-radius: 5px;
-}
-article h1{
-    font-size: 40px;
-    color: #222;
-    margin-left: 50px;
-}
-article a{
-    margin-left: 50px;
-    color: #222;
-    font-size: 30px;
-}
-footer{
-    background-color: #777;
-    padding: 10px;
-    padding-top: 10px;
+footer h1{
+    margin-top: 20px;
+    margin-bottom: 20px;
     text-align: center;
+    font-size: 40px;
     color: #f1f1f1;
-    margin-top: 350px;
-    border-radius: 5px;
+}
+footer .album{
+    background-color: aqua;
+}
+footer .album img{
+    width: 200px;
+    height: 150px;
+    margin-left: 75px;
+}
+footer .link{
+    margin-top: 5px;
+    text-align: center;
+    background: black;
+    color: #f1f1f1;
+    padding: 15px;
+}
+footer .link a img{
+    width: 30px;
+    height: 30px;
+    margin-left: 30px;
 }
